<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tip_question"
            app:layout_constraintBottom_toBottomOf="@id/tip_question" />

        <TextView
            android:id="@+id/tip_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />
        <RadioGroup
            android:id="@+id/tip_option"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_amazing"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tip_question"
            app:layout_constraintStart_toStartOf="@id/tip_question">

            <RadioButton
                android:id="@+id/option_amazing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/option_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/option_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_tip"
            app:layout_constraintBottom_toBottomOf="@id/round_up_tip" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_tip"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_option"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@id/icon_round_up" />


        <Button
            android:id="@+id/calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_tip"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/round_up_tip" />

        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tip Amount: $10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate" />

        <TextView
            android:id="@+id/textViewA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>